# fancy-assert

./: CMakeLists.txt  README.md  example.cpp
codegen/: boost_preprocessor.py
include/: fancy_assert.hpp  multi_assert.hpp
include/fancy-assert/: assert.hpp  multi_assert.hpp
include/fancy-assert/detail/: impl.hpp
include/fancy_assert/: assert.hpp  multi_assert.hpp
include/fancy_assert/detail/: boostpp.h  impl.hpp
src/: fancy_assert.cpp
test/: CMakeLists.txt
